<resources>
    <string name="app_name">Nearby nearMe gym</string>
    <string name="email_edit_txt">Email</string>
    <string name="password_edit_txt">Password</string>
    <string name="login_btn_login">login</string>
    <string name="forgot_password_txt">FORGOT PASSWORD?</string>
    <string name="create_account_btn">CREATE ACCOUNT</string>
    <string name="or">OR</string>
    <string name="new_to_nearby_nearme_gym">Do not have account?</string>
    <string name="name_edit_txt">Name</string>
    <string name="confirm_password_edit_txt">Confirm Password</string>
    <string name="click_to_login_btn">click to login</string>
    <string name="txt_header">Set Profile</string>
    <string name="phone_number_txt">Phone number</string>
    <string name="age_txt">Age</string>
    <string name="current_weight_txt">Current weight</string>
    <string name="target_weight_txt">Target weight</string>
    <string name="save_btn">save</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to mention</item>
    </string-array>
    <string name="title_activity_locations_in__africa">Locations_in_Africa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender_txt">Gender</string>
    <string name="help_txt">Help</string>
    <string name="settings_txt">Profile</string>

    <string name="date">datePicker</string>
    <string name="time">timePicker</string>
    <string name="date_txt">Click to Pick a Date</string>
    <string name="pick_time_txt">Pick Time</string>
    <string name="no_of_sets_txt">No of sets</string>
    <string name="continue_with_facebook_txt">Continue with facebook</string>

    <string-array name="exercise_cat">
        <item>Select exercise name/type</item>
        <item>Horizontal Seated Leg Press</item>
        <item>Lat Pull-Down</item>
        <item>Cable Biceps Bar</item>
        <item>Cable Triceps Bar (or Triceps Pushdown)</item>
        <item>Chest Press</item>
        <item>Hanging Leg Raise</item>
        <item>Cardio: Rowing Machine</item>
    </string-array>
    <string name="facebook_app_id">268444440576728</string>
    <string name="title_activity_user_profile">user_profile</string>
    <string name="add_workout_session_txt">Add Workout session</string>
    <string name="date_edit_txt">Date</string>

</resources>
