<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.set_profile_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal">

        <!--set profile-->
        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_header"
            android:paddingVertical="@dimen/view_padding"/>

        <EditText
            android:id="@+id/name_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_header"
            android:hint="@string/name_edit_txt"
            android:inputType="text"
            android:padding="@dimen/view_padding"/>
        <EditText
            android:id="@+id/email_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_edit_txt"
            android:layout_below="@+id/name_edit_txt"
            android:padding="@dimen/view_padding"/>
        <EditText
            android:id="@+id/phone_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number_txt"
            android:layout_below="@+id/email_edit_txt"
            android:padding="@dimen/view_padding"/>

        <EditText
            android:id="@+id/age_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_edit_txt"
            android:hint="@string/age_txt"
            android:padding="@dimen/view_padding"
            android:inputType="number"/>

        <EditText
            android:id="@+id/weight_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_edit_txt"
            android:hint="@string/current_weight_txt"
            android:padding="@dimen/view_padding"
            android:inputType="number"/>

        <EditText
            android:id="@+id/target_weight_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight_edit_txt"
            android:hint="@string/target_weight_txt"
            android:padding="@dimen/view_padding"/>

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</ScrollView>