<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login_activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="100dp">
        <!--sign up form-->
        <EditText
            android:id="@+id/name_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_edit_txt"
            android:inputType="text"
            android:padding="@dimen/view_padding" />

        <EditText
            android:id="@+id/email_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_edit_txt"
            android:hint="@string/email_edit_txt"
            android:inputType="textEmailAddress"
            android:padding="@dimen/view_padding" />

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_txt"
            android:hint="@string/password_edit_txt"
            android:padding="@dimen/view_padding"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_txt"
            android:hint="@string/confirm_password_edit_txt"
            android:padding="@dimen/view_padding"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signup_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password_edit_txt"
            android:padding="@dimen/view_padding"
            android:text="@string/create_account_btn" />

        <LinearLayout
            android:id="@+id/lineear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_btn_signup"
            android:orientation="horizontal"
            android:padding="@dimen/view_padding">

            <View
                android:id="@+id/hr"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/mycolor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:paddingHorizontal="@dimen/view_padding"/>

            <View
                android:id="@+id/hr1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/mycolor"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineear_layout"
            android:text="@string/click_to_login_btn"/>

    </RelativeLayout>

</ScrollView>