<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login_activity">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical">
        <!--login form-->
        <EditText
            android:id="@+id/email_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edit_txt"
            android:inputType="textEmailAddress"
            android:padding="@dimen/view_padding"/>

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_txt"
            android:hint="@string/password_edit_txt"
            android:padding="@dimen/view_padding"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/password_edit_txt"
            android:text="@string/forgot_password_txt"
            android:padding="@dimen/view_padding"/>


        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_textview"
            android:text="@string/login_btn_login"
            android:padding="@dimen/view_padding"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/login_btn_login"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:paddingTop="@dimen/view_padding">

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_to_nearby_nearme_gym" />
            <TextView
                android:id="@+id/sign_up_txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_btn"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:padding="@dimen/padding_txt_view"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayout"
            android:orientation="horizontal"
            android:padding="@dimen/view_padding">

            <View
                android:id="@+id/hr"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/mycolor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:paddingHorizontal="@dimen/view_padding"/>

            <View
                android:id="@+id/hr1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/mycolor"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineear_layout" />


    </RelativeLayout>

</ScrollView>