<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Add_work_out_session">

    //TODO put a map fragment or a location selection

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal">

        <Button
            android:id="@+id/date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_txt" />

        <Button
            android:id="@+id/time_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_txt_view"
            android:text="@string/pick_time_txt" />

        <EditText
            android:id="@+id/date_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/date_btn"
            android:layout_alignStart="@+id/date_btn"
            android:layout_below="@+id/date_btn" />

        <EditText
            android:id="@+id/time_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/time_btn"
            android:layout_alignStart="@+id/time_btn"
            android:layout_below="@+id/time_btn" />


        <Spinner
            android:id="@+id/exercise_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_txt_view" />

        <EditText
            android:id="@+id/no_of_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exercise_cat"
            android:hint="@string/no_of_sets_txt"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_of_sets"
            android:text="@string/save_btn" />


    </RelativeLayout>


</ScrollView>